feature: add my dapps

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -15,6 +15,8 @@
     "titleAcademy": "My Talks at Events",
     "titleExperiences": "Main Experiences",
     
+    "title-dApps": "My dApps",
+
     "exp1Title": "Software Engineer",
     "exp1Firm": "Horizon Studio | Remote",
     "exp1Time": "abr de 2024 - until now",
