--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -14,6 +14,8 @@
     "titleTalks": "Minhas Palestras em Eventos",
     "titleAcademy": "Academia",
     "titleExperiences": "Principais Experiências",
+
+    "title-dApps": "Meus dApps",
     
     "exp1Title": "Engenheiro de Software",
     "exp1Firm": "Horizon Studio | Remoto",
