--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,18 +1,16 @@
 {
     "titlePresentation": "Hi, I'm <span>Erlon</span><br /><span class='span'>Software Engineer.</span>",
     "discPresentation": "I have a Bachelor's degree in Computer Science, I am a University Professor and a Software Engineer with a focus on backend development. I have experience with DevOps practices, always seeking to create scalable, secure and high-performance solutions.",
-    "cvAccess": "Access my CV",
-    "cvLink": "https://bit.ly/portf-cv-en-erlondnjr",
     "titleAboutMe": "More About Me",
     "aboutMe1": "I have participated in national and international projects, aligning technological innovation with client needs and collaborating with multidisciplinary teams to deliver impactful solutions.",
     "aboutMe2": "About my main Stack, I have over six years working with Python and Django, and four years working with Docker, AWS and their main services. I also work a lot in the role of Software/Solutions Architect.",
     "aboutMe3": "I am an independent speaker and researcher in the areas of Information Security, Hardware Hacking and the Internet of Things.",
-    "aboutMe4": "I have been studying and seeking to learn more and more about Blockchain/Solidity and 3D Game Development.",
+    "aboutMe4": "Always improving myself more and more about Blockchain/Solidity and Secure Software Development.",
     "titleSkills": "My Skills/Technologies",
     "subTitleSkills": "Tools, Technologies and Skills",
     "otherSkills": "Other Notable Tools, Technology and Skills",
     "titleTalks": "Minhas Palestras em Eventos",
-    "titleAcademy": "My Talks at Events",
+    "titleAcademy": "My Talks",
     "titleExperiences": "Main Experiences",
     
     "title-dApps": "My dApps",
@@ -22,7 +20,7 @@
     "exp1Time": "abr de 2024 - until now",
     "exp1Desc": "I develop and manage software projects, covering Smart Contracts, Blockchain, RESTFul APIs and Web Services. I lead technology teams and define the company's software and infrastructure architecture. My experience includes developing mobile and web application solutions, as well as ensuring the security and reliability of systems. I am also responsible for evaluating and implementing new technologies, aligning them with business needs.",
     
-    "exp2Title": "Computer Professor",
+    "exp2Title": "University Professor",
     "exp2Firm": "Faculdade Católica da Paraíba | Cajazeiras, Paraíba",
     "exp2Time": "fev de 2022 - until now",
     "exp2Desc": "I teach the following subjects: Information and Technology Management, Project Management, Object Oriented Programming, Mobile Programming, Software Evolution, Software Testing, Computer Architecture and Organization, and Image Processing and Computer Vision. In addition, I work as a coordinator of an educational software research and development project.",
